`fix`: Fixed `Dark Mode` and made `highlight cards` `compact`

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 
 
-.dark {
+/* .dark {
   --color-bg-primary: #2d3748;
   --color-bg-secondary: #283141;
   --color-text-primary: #f7fafc;
@@ -18,7 +18,7 @@
   --color-text-primary: #2d3748;
   --color-text-secondary: #4a5568;
   --color-text-accent: #2b6cb0;
-}
+} */
 
 @layer utilities {
   /* Chrome, Safari and Opera */
